# OpencvTest

./: local.properties
app/: .gitignore  build.gradle
app/src/androidTest/java/com/example/opencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/opencvtest/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
